--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,3 +7,8 @@
 # two:
 #   name: MyString
 #   email: MyString
+
+michael:
+  name: michael
+  email: michael@c.c
+  password_digest: <%= User.digest('password') %>
