--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,6 +12,7 @@ michael:
   name: michael
   email: michael@c.c
   password_digest: <%= User.digest('password') %>
+  admin: true
 
 archer:
   name: Sterling Archer
