--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,19 +9,25 @@
 #   email: MyString
 
 michael:
-  name: michael
+  name:  michael
   email: michael@c.c
   password_digest: <%= User.digest('password') %>
-  admin: true
+  admin:     true,
+  activated: true,
+  activated_at: <%= Time.zone.now %>
 
 archer:
-  name: Sterling Archer
+  name:  Sterling Archer
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
+  activated:    true,
+  activated_at: <%= Time.zone.now %>
 
 <% 30.times do |n| %>
 user_<%= n %>:
   name:  <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
+  activated:    true,
+  activated_at: <%= Time.zone.now %>
 <% end %>
