--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -23,6 +23,13 @@ archer:
   activated:    true,
   activated_at: <%= Time.zone.now %>
 
+inactive:
+  name: Inactive User
+  email: inactive@example.com
+  password_digest: <%= User.digest('password') %>
+  admin: false
+  activated: false
+
 <% 30.times do |n| %>
 user_<%= n %>:
   name:  <%= "User #{n}" %>
