--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -16,6 +16,14 @@ michael:
   activated: true,
   activated_at: <%= Time.zone.now %>
 
+admin_user:
+  name:  admin
+  email: admin@example.gov
+  password_digest: <%= User.digest('password') %>
+  admin:     true,
+  activated:    true,
+  activated_at: <%= Time.zone.now %>
+
 archer:
   name:  Sterling Archer
   email: duchess@example.gov
